# ros_emotiv_cli

./: CMakeLists.txt  README.md  package.xml  setup.py
include/emotiv_training/: emotiv_training.hpp
launch/: train.launch
scripts/: training_cli.py
src/: emotiv_training.cpp
