<?xml version="1.0"?>
<package format="2">
  <name>emotiv_training</name>
  <version>1.0.0</version>
  <description>Libraries for training with the Emotiv community-sdk</description>

  <maintainer email="danielkelleher@protonmail.com">dan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>emotiv_msgs</depend>

</package>
